Changed some colors

--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ h1 {
 }
 
 h1 span {
-    color: #008080;  /* Teal color for "Earth" */
+    color: #00ffff;  /* Teal color for "Earth" */
     font-weight: 600;
 }
 
