Even more styling changes

--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ p {
 h1 {
     font-size: 1.5rem;  /* Control text size */
     font-weight: 700;
-    color: #2c5530;
+    color: #203f23;
     margin: 0;
     line-height: 1.2;
 }
